--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "learn-starter",
-  "version": "0.1.0",
-  "private": true,
+  "name": "html",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev -p 80",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 80"
+    "start": "next start",
+    "build-static-html": "next build && next export"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "jquery": "^3.5.1",
-    "next": "^10.0.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "sass": "^1.29.0"
+    "next": "^10.0.3",
+    "react": "^17.0.1",
+    "react-countup": "^4.3.3",
+    "react-dom": "^17.0.1",
+    "react-slick": "^0.27.13",
+    "react-tabs": "^3.1.1",
+    "react-visibility-sensor": "^5.1.1",
+    "sass": "^1.29.0",
+    "slick-carousel": "^1.8.1"
   }
 }
